Fixed flickering of login page when there's token in LocalStorage

--- a/src/components/elements/Spinner/Spinner.module.scss
+++ b/src/components/elements/Spinner/Spinner.module.scss
@@ -66,5 +66,6 @@
   left: 50%;
   font-weight: 600;
   transform: translate(-50%, -50%);
+  white-space: nowrap;
   user-select: none;
 }
